2003-09-04  Nick Clifton  <nickc@redhat.com>

	* archures.c (bfd_mach_v850e1): Define.
	* bfd-in2.h: Regenerate.
	* cpu-v850.h (scan): Accept bfd_mach_v850e1.
	(arch_info_struct): Include an entry for bfd_mach_v850e1.
	* elf32-v850.c (v850_elf_object_p): Accept E_V850E1_ARCH flag.
	(v850_elf_final_write_processing): Accept bfd_mach_v850e1.
	(v850_elf_print_private_bfd_data): Interpret E_V850E1_ARCH flag.
	(v850_elf_merge_private_bfd_data): Allow v850e1 binaries to be
	linked with v850e binaries.  Mark the output as v850e.
	
2003-09-03  Nick Clifton  <nickc@redhat.com>

	* cofflink.c (_bfd_coff_link_input_bfd): Do not skip section 
	symbols that are used in relocs.

2003-08-30  Robert Millan  <robertmh@gnu.org>

	* configure.in: Match GNU/KFreeBSD with new kfreebsd*-gnu triplet.
	* config.bfd: Likewise.
	* configure: Regenerate.

2003-08-31  Christian Groessler  <chris@groessler.org>

	* elf32-i860.c (i860_howto_pc26_reloc): Finish relocation here
	instead of returning bfd_reloc_continue.

2003-08-31  Andreas Jaeger  <aj@suse.de>

	* merge.c: Update to ISO C90.

2003-08-27  Ian Lance Taylor  <ian@airs.com>

	* configure.in: Check for strtoull.
	* bfd.c (bfd_scan_vma): Use strtoull when available.
	* configure, config.in: Regenerate.

	* configure.in: Define and substitute BFD_HOST_LONG_LONG.
	* bfd-in.h: Define BFD_HOST_LONG_LONG.  Test it rather than
	__GNUC__ when deciding whether to use long long for
	BFD_HOST_64_BIT.
	* configure, Makefile.in, doc/Makefile.in, bfd-in2.h: Regenerate.

2003-08-27  Christian Groessler  <chris@groessler.org>

	* elf32-i860.c (i860_howto_pc26_reloc, i860_howto_pc16_reloc,
	i860_howto_splitn_reloc, i860_howto_highadj_reloc): New
	functions.
	(elf32_i860_howto_table): Insert the new functions as
	'special_function's in the proper reloc type entries.

2003-08-27  Richard Sandiford  <rsandifo@redhat.com>

	* elf32-frv.c (elf32_frv_relocate_section): Use
	_bfd_elf_rela_local_sym.

2003-08-26  Michael Snyder  <msnyder@redhat.com>
